0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_processing/index.rst
:orphan:

.. _examples-processing-index:

####################
Processing NDDataset
####################



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Apodization
-----------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform exponential window multiplication to apodize a NMR signal in the ti...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/thumb/sphx_glr_plot_proc_em_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_em.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exponential window multiplication</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we use sine bell or squared sine bell window multiplication to apodize a NMR s...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/thumb/sphx_glr_plot_proc_sp_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sine bell and squared Sine bell window multiplication</div>
    </div>


.. raw:: html

    </div>


Denoising
-----------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we use the denoise method to remove the noise from a 2D Raman spectrum.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/thumb/sphx_glr_plot_denoising_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Denoising a 2D Raman spectrum</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we use the despike method to remove the noise from a Raman spectrum.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/thumb/sphx_glr_plot_despike_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_despike.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Removing cosmic ray spikes from a Raman spectrum</div>
    </div>


.. raw:: html

    </div>


filtering
---------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Savitky-Golay and Whittaker-Eilers smoothing of a Raman spectrum">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/thumb/sphx_glr_plot_filter_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_filtering_plot_filter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Savitky-Golay and Whittaker-Eilers smoothing of a Raman spectrum</div>
    </div>


.. raw:: html

    </div>


Processing NMR datasets
-----------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Analysis CP NMR spectra">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/thumb/sphx_glr_plot_processing_cp_nmr_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_cp_nmr.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Analysis CP NMR spectra</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Processing NMR spectra (slicing, baseline correction, peak picking, peak fitting)">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/thumb/sphx_glr_plot_processing_nmr_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Processing NMR spectra (slicing, baseline correction, peak picking, peak fitting)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Processing Relaxation measurement">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/thumb/sphx_glr_plot_processing_nmr_relax_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr_relax.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Processing Relaxation measurement</div>
    </div>


.. raw:: html

    </div>


Processing Raman datasets
-------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Processing RAMAN spectra">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/thumb/sphx_glr_plot_processing_raman_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_raman_plot_processing_raman.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Processing RAMAN spectra</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gettingstarted/examples/gallery/auto_examples_processing/apodization/index.rst
   /gettingstarted/examples/gallery/auto_examples_processing/denoising/index.rst
   /gettingstarted/examples/gallery/auto_examples_processing/filtering/index.rst
   /gettingstarted/examples/gallery/auto_examples_processing/nmr/index.rst
   /gettingstarted/examples/gallery/auto_examples_processing/raman/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
